...
      backgroundColor: theme.colors.primary,
    },
  });

  return (
    <FAB
      testID="fab-add"
      icon="plus"
      color="white"
      style={styles.fab}
      onPress={onPress}
    />
  );
...
