...
      />
      <Tabs.Screen
        name="(wines)"
        listeners={resetTabOnPress}
        options={{
          title: t("nav.wines"),
          tabBarButtonTestID: "wines-tab",
          tabBarIcon: ({ color, size }) => (
            <Icon source="glass-wine" size={size} color={color} />
          ),
        }}
      />
      <Tabs.Screen
        name="(storages)"
        listeners={resetTabOnPress}
        options={{
          title: t("nav.storages"),
          tabBarButtonTestID: "storages-tab",
          tabBarIcon: ({ color, size }) => (
            <Icon source="warehouse" size={size} color={color} />
          ),
        }}
      />
      <Tabs.Screen
        name="(more)"
        listeners={resetTabOnPress}
        options={{
          title: t("nav.more"),
          tabBarButtonTestID: "more-tab",
          tabBarIcon: ({ color, size }) => (
            <Icon source="dots-horizontal" size={size} color={color} />
          ),
        }}
      />
    </Tabs>
...
